--- a/pages/abrir-cuenta-form-3.html
+++ b/pages/abrir-cuenta-form-3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
-    <title>AluraBank - Registro</title>
+    <title>HomeBanking - Registro</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,7 +26,7 @@
   <body>
     <header class="encabezado">
       <h1 class="encabezado__logo-inicio">
-        Alura<span class="encabezado__logo-final">Bank</span>
+        Home<span class="encabezado__logo-final">Banking</span>
       </h1>
       <ul class="encabezado-lista">
         <li class="encabezado-lista__item">
@@ -59,7 +59,7 @@
 
     <section class="banner">
       <h3 class="banner__titulo">
-        ¡Alura-cuenta es el primer paso hacia la libertad financiera!
+        ¡Home-cuenta es el primer paso hacia la libertad financiera!
       </h3>
     </section>
 
@@ -97,7 +97,7 @@
           </p>
 
           <img
-            src="../img/qr-code.png"
+            src="../img/codigo_qr.png"
             alt="Código QR"
             class="formulario__imagen qr"
           />
@@ -107,7 +107,7 @@
 
     <footer class="pie_pagina">
         <section class="pie_pagina__empresa">
-          <h2 class="pie_pagina__titulo">AluraBank</h2>
+          <h2 class="pie_pagina__titulo">HomeBanking</h2>
           <ul class="pie_pagina__lista">
             <li>
               <a href="#" class="pie_pagina__link">Sobre</a>
@@ -138,13 +138,13 @@
           <h2 class="pie_pagina__titulo">Contacto</h2>
           <ul class="pie_pagina__lista">
             <li>
-              <a href="#" class="pie_pagina__link">0800 444 ALURA</a>
+              <a href="#" class="pie_pagina__link">0800 444 Home</a>
             </li>
             <li>
-              <a href="#" class="pie_pagina__link">ayuda@alurabank.com</a>
+              <a href="#" class="pie_pagina__link">ayuda@homebanking.com</a>
             </li>
             <li>
-              <a href="#" class="pie_pagina__link">defensoria@alurabank.com</a>
+              <a href="#" class="pie_pagina__link">defensoria@bank.com</a>
             </li>
           </ul>
         </section>
@@ -157,7 +157,7 @@
           <li><img src="../img/instagram.png" alt="ícono de instagram" /></li>
           </ul>
           <h2 class="pie_pagina__logo">
-            <span class="pie_pagina__logo--negrito">Alura</span>Bank
+            <span class="pie_pagina__logo--negrito">Home</span>Bank
           </h2>
         </section>
       </footer>
